GNOME Bugzilla – Bug 712601
gphoto backend returns wrong offset from seek
Last modified: 2013-11-30 13:59:17 UTC
This breaks applications which try to seek to the end of the file and expect a non-zero return value.
Created attachment 260129 [details] [review] gphoto2: Return the correct offset when seeking
Review of attachment 260129 [details] [review]: Looks good!
Pushed to master as 159ef25cbe37176a9b2e1861fbf66a826097d19c and gnome-3-10 as d6ae1bce7ddd12d7ce7ae23141e1b4cd81aba562. Thanks!