gphoto2: Return the correct offset when seeking

https://bugzilla.gnome.org/show_bug.cgi?id=712601